--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,21 @@
-/* You can add global styles to this file, and also import other style files */
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;500;700;900&display=swap");
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  background-color: #111111;
+  color: #fefefe;
+  font-family: "Poppins", sans-serif;
+}
+:root {
+  --grey: #bdbdbd7a;
+}
+body {
+  padding: 0 3rem;
+  padding-bottom: 10vh;
+  height: 96vh;
+}
+
+hr {
+  border-color: hsla(0, 0%, 100%, 0.082);
+}
