--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,6 +1,5 @@
 .main__wrapper {
   width: 100%;
-  height: 100%;
   display: flex;
   flex-direction: row;
   justify-content: center;
@@ -18,5 +17,14 @@
   width: 100%;
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  gap: 1.5vh;
+}
+
+@media (max-width: 1024px) {
+  .main__wrapper {
+    flex-direction: column;
+  }
+  .main__wrapper > aside {
+    gap: 2vh;
+  }
 }
