--- a/src/app/components/big-card/big-card.component.css
+++ b/src/app/components/big-card/big-card.component.css
@@ -13,7 +13,9 @@
 .img__wrapper > img {
   object-fit: cover;
   width: 100%;
+  min-width: 100%;
   height: 100%;
+  min-height: 25rem;
 }
 .post__content {
   display: flex;
@@ -37,4 +39,11 @@
 .post__description {
   color: var(--grey);
   line-height: 1.5rem;
+}
+
+@media (max-width: 320px) {
+  .img__wrapper {
+    height: 2rem;
+    width: 100%;
+  }
 }
