--- a/src/app/components/small-card/small-card.component.css
+++ b/src/app/components/small-card/small-card.component.css
@@ -7,12 +7,14 @@
   cursor: pointer;
 }
 .side-post__img__wrapper {
-  width: 100%;
-  height: 100%;
-}
-.side-post__img__wrapper > img {
   width: 16.25rem;
   height: 10.625rem;
+}
+.side-post__img__wrapper > img {
+  width: 100%;
+  min-width: 16.25rem;
+  height: 100%;
+  min-height: 10.625rem;
   object-fit: cover;
 }
 .side-post__content {
@@ -36,4 +38,13 @@
 
 .side-post__title:hover {
   filter: brightness(0.9);
+}
+
+@media (max-width: 425px) {
+  .side-post__wrapper {
+    flex-direction: column;
+  }
+  .side-post__img__wrapper {
+    width: 100%;
+  }
 }
