Implemented Routes and API Connection

--- a/src/app/components/menu-bar/menu-bar.component.html
+++ b/src/app/components/menu-bar/menu-bar.component.html
@@ -1,6 +1,6 @@
 <nav>
   <div class="nav__wrapper">
-    <a id="nav__logo"> LOGO </a>
+    <span id="nav__logo" routerLink="/"> LOGO </span>
     <ul class="nav__list">
       <li class="nav__list__item">Learn</li>
       <li class="nav__list__item">Shortcut</li>
