--- a/src/app/components/big-card/big-card.component.html
+++ b/src/app/components/big-card/big-card.component.html
@@ -1,18 +1,14 @@
-<article class="post__wrapper">
+<article class="post__wrapper" routerLink="/article/{{ post.id }}">
   <div class="img__wrapper">
     <img src="https://source.unsplash.com/random" alt="Imagem do post" />
   </div>
   <div class="post__content">
-    <time class="post__postedTime">juli 17, 2023</time>
+    <time class="post__postedTime">{{ post.posted }}</time>
     <h2 class="post__title">
-      Lorem ipsum, dolor sit amet consectetur adipisicing elit. Debitis, dolor
-      consequatur!
+      {{ post.title }}
     </h2>
     <span class="post__description">
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur
-      nostrum, inventore id temporibus repellat unde quasi! Hic, magnam error
-      exercitationem, eaque quibusdam ipsum quo sit quia distinctio quos
-      laboriosam voluptas.
+      {{ post.description }}
     </span>
   </div>
 </article>
